# oovra

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SCHEMA.md  ouvre-build-guide.md
.github/workflows/: ci.yml
Documentation/: README.md  build-guide.md
Documentation/demos/: README.md
Documentation/demos/01-lossless-roundtrip/: notes.md
Documentation/demos/03-deep-text-flattening/: notes.md
Documentation/demos/04-structural-diff/: notes.md  pairing-v1.md  pairing-v2.md
Documentation/demos/05-mixed-order-regression/: notes.md
Documentation/demos/v0.1/: README.md
Documentation/demos/v0.2/: README.md
Documentation/reference/: README.md  build-guide.md  command-compare.md  command-compose.md  command-create.md  command-decompose.md  errors.md  kind-and-delimiters.md  schema.md
Documentation/v0.1/: README.md
Documentation/v0.1/version reports/: README.md  oovra-server-feasibility.md  v0.2-scoping.md  (+1 more)
agent-tasks/: agent-tasks.md  completed-tasks.md
elements/: examples-block.md  output-format-markdown.md  refusal-policy-strict.md  role-declaration.md  tone-direct.md
gui/: Cargo.toml  index.html
gui/src/: app.rs  canvas.rs  editor.rs  lib.rs  main.rs
oovra-by-example/: README.md
oovra-by-example/demos/: README.md
oovra-by-example/reference/: README.md  command-compare.md  command-compose.md  command-create.md  command-decompose.md  errors.md  order-and-delimiters.md  schema.md
sprints/: roadmap.md
src/: create.rs  decompose.rs  diff.rs  discovery.rs  element.rs  error.rs  header.rs  lib.rs  library.rs  main.rs  migrate.rs  render.rs
tests/: end_to_end.rs
(+91 files in other folders)
