[workspace]
members = [".", "gui"]

[package]
name = "oovra"
version = "0.2.0"
edition = "2021"
description = "A Rust tool for composition and comparison of agentic system prompts from Markdown+TOML 'prompt elements'"
license = "MIT OR Apache-2.0"
authors = ["Charles Russell <crussella0129@gmail.com>"]
repository = "https://github.com/crussella0129/oovra"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
semver = "1"
similar = "2"
owo-colors = "4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde_json = "1"

[lib]
name = "oovra"
path = "src/lib.rs"

[[bin]]
name = "oovra"
path = "src/main.rs"
